# Tigers7228-Simulations

./: LICENSE  README.md  pyproject.toml
src/: 65mm diam.py  allgraphs.py  anglecomparison.py  api.py  blade3.py  blade5.py  blade6.py  blade7.py  blade8.py  bladecomparison.py  diameter60mm.py  diameter62mm.py  diameter67mm.py  diameter72mm.py  diameter75mm.py  diameterscomparison.py  dimeter65mm.py  filetli.py  filetlivsfiletsiz.py  filetsiz.py  fortydegree.py  fortyfivedegree.py  fortytwodegree.py  lengthcomparison.py  main.py  thirtydegree.py  thirtyfivedegree.py  thirtysevendegree.py  thirtytwodegree.py  thirtytwovsthirty.py  thrustsvslength.py  thrustvsangle.py  thrustvsblade.py  thrustvsdiameter.py  twelwepointfive.py
