[tool.poetry]
name = "Tigers_Solidworks_propeller_simulation"
version = "0.1.0"
description = ""
authors = ["Your Name <dsenturk25@my.uaa.k12.tr>"]

[tool.poetry.dependencies]
python = "^3.8"
oauth2client = "^4.1.3"
gspread = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
